--- a/pub/htm/home.htm
+++ b/pub/htm/home.htm
@@ -57,24 +57,24 @@
 					<span class="label label-danger">{{u.length}}</span>
 					<a href="javascript:void(0);" class="btn btn-xs text-muted pull-right">{{b}}</a>
 					<hr />
-					<div class="row">
-					<a href="javascript:void(0);" class="p btn btn-primary">
-						<span class="glyphicon glyphicon-upload"></span>
-						<span class="hidden-xs hidden-sm">Push</span>
-					</a>
-					<a href="javascript:void(0);" class="d btn btn-info">
-						<span class="glyphicon glyphicon-download"></span>
-						<span class="hidden-xs hidden-sm">Pull</span>
-					</a>
-					<a href="javascript:void(0);" class="diff btn btn-default">
-						<span class="glyphicon glyphicon-duplicate"></span>
-						<span class="hidden-xs hidden-sm">Diff</span>
-					</a>
-					<a href="javascript:void(0);" class="addpush btn btn-success ">
-						<span class="glyphicon glyphicon-plus"></span>
-						<span class="glyphicon glyphicon-upload"></span>
-						<span class="hidden-xs hidden-sm">Add&Push</span>
-					</a>
+					<div class="status">
+						<a href="javascript:void(0);" class="p btn btn-primary">
+							<span class="glyphicon glyphicon-upload"></span>
+							<span class="hidden-xs hidden-sm">Push</span>
+						</a>
+						<a href="javascript:void(0);" class="d btn btn-info">
+							<span class="glyphicon glyphicon-download"></span>
+							<span class="hidden-xs hidden-sm">Pull</span>
+						</a>
+						<a href="javascript:void(0);" class="diff btn btn-default">
+							<span class="glyphicon glyphicon-duplicate"></span>
+							<span class="hidden-xs hidden-sm">Diff</span>
+						</a>
+						<a href="javascript:void(0);" class="addpush btn btn-success ">
+							<span class="glyphicon glyphicon-plus"></span>
+							<span class="glyphicon glyphicon-upload"></span>
+							<span class="hidden-xs hidden-sm">Add&Push</span>
+						</a>
 					</div>
 				</li>
 			{{/projects}}
