--- a/pub/htm/home.htm
+++ b/pub/htm/home.htm
@@ -85,6 +85,7 @@
 				<div class="panel panel-default">
 					<div class="panel-heading">
 						<strong>{{r}}</strong>
+						<a data-action="log" href="javascript:void(0);" class="action btn btn-default"><span class="glyphicon glyphicon-list"></span></a>
 						<span class="pull-right">{{b}}</span>
 					</div>
 					<div class="panel-body">
