--- a/pub/htm/home.htm
+++ b/pub/htm/home.htm
@@ -41,7 +41,112 @@
   <a href="#edit" class="btn btn-default">EDIT</a>
   <a href="#post" class="btn btn-default">POST</a>
   <a href="#ssh" class="btn btn-default">SSH</a>
+  <a href="#automagic" class="btn btn-default">AUTOMAGIC</a>
 </div>
+</script>
+<script id="tpl-automagic" type="text/html">
+  <div class="automagic container">
+    <div class="workflows">
+      <div class="list-group">
+      {{#workflows}}
+        <a class="list-group-item">
+          {{.}}
+          <button style="margin-left:1em;" class="btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-play"></span> Run</button>
+          <button class="hidden btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-calendar"></span> Schedule</button>
+        </a>
+      {{/workflows}}
+      </div>
+      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <a class="navbar-brand pull-right" href="javascript:createWorkflow();">
+          <span class="glyphicon glyphicon-plus-sign"></span> New Workflow
+        </a>
+      </nav>
+    </div>
+    <div class="workflow hidden">
+      <div class="row">
+        <a class="btn btn-default" href="javascript:view('workflows');">
+          <span class="glyphicon glyphicon-list"></span> Workflows
+        </a>
+      </div>
+      <div class="row">
+        <div class="col-sm-6">content</div>
+        <div class="col-sm-6">output</div>
+      </div>
+      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <a class="navbar-brand" href="javascript:void(0);">
+          <span class="glyphicon glyphicon-trash"></span> Remove
+        </a>
+        <a class="navbar-brand pull-right" href="javascript:void(0);">
+          <span class="glyphicon glyphicon-play"></span> Run
+        </a>
+      </nav>
+    </div>
+    <div class="actions hidden">
+      <div class="list"></div>
+      <hr />
+      <input class="form-control" type="text" placeholder="Name" />
+      <hr />
+      <div class="action"></div>
+      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <a class="navbar-brand text-center" href="javascript:view('workflows');">
+          <span class="glyphicon glyphicon-list"></span> Workflows
+        </a>
+        <a class="navbar-brand" href="javascript:createAction();">
+          <span class="glyphicon glyphicon-plus-sign"></span> New Action
+        </a>
+        <a class="navbar-brand pull-right" href="javascript:void(0);">
+          <span class="glyphicon glyphicon-floppy-disk"></span> Save
+        </a>
+      </nav>
+    </div>
+    <div class="action hidden">
+      <div class="row">
+        <div class="content col-xs-12">content</div>
+      </div>
+      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <a class="navbar-brand" href="javascript:view('actions');">
+          <span class="glyphicon glyphicon-plus-sign"></span> New Workflow
+        </a>
+        <a class="navbar-brand pull-right" href="javascript:void(0);">
+          <span class="glyphicon glyphicon-trash"></span> Remove
+        </a>
+      </nav>
+    </div>
+    <div class="methods hidden">
+      <input class="form-control" type="text" placeholder="Name" />
+      <hr />
+      <div class="list"></div>
+      <hr />
+      <div class="input"></div>
+      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <a class="navbar-brand" href="javascript:view('actions');">
+          <span class="glyphicon glyphicon-plus-sign"></span> New Workflow
+        </a>
+        <a class="navbar-brand pull-right" href="javascript:void(0);">
+          <span class="glyphicon glyphicon-floppy-disk"></span> Save
+        </a>
+      </nav>
+    </div>
+  </div>
+</script>
+<script id="tpl-automagic-actions" type="text/html">
+  <div class="list-group">
+  {{#actions}}
+    <a class="list-group-item">
+      {{.}}
+      <button onclick="javascript:readAction('{{.}}');" class="btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-eye-open"></span> View</button>
+    </a>
+  {{/actions}}
+  </div>
+</script>
+<script id="tpl-automagic-methods" type="text/html">
+  <div class="container-fluid">
+  {{#methods}}
+    <a class="btn btn-default">
+      {{.}}
+    </a>
+  {{/methods}}
+  </div>
 </script>
 <script id="tpl-git" type="text/html">
 	<div class="git">
