--- a/pub/htm/home.htm
+++ b/pub/htm/home.htm
@@ -49,9 +49,9 @@
     <div class="workflows">
       <div class="list-group">
       {{#workflows}}
-        <a class="list-group-item">
+        <a data-workflow="{{.}}" class="list-group-item">
           {{.}}
-          <button style="margin-left:1em;" class="btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-play"></span> Run</button>
+          <button style="margin-left:1em;" class="hidden btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-play"></span> Run</button>
           <button class="hidden btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-calendar"></span> Schedule</button>
         </a>
       {{/workflows}}
@@ -64,19 +64,23 @@
     </div>
     <div class="workflow hidden">
       <div class="row">
-        <a class="btn btn-default" href="javascript:view('workflows');">
-          <span class="glyphicon glyphicon-list"></span> Workflows
-        </a>
-      </div>
-      <div class="row">
-        <div class="col-sm-6">content</div>
-        <div class="col-sm-6">output</div>
+        <div class="col-sm-6">
+          <h3>Request</h3>
+          <pre id="workflow-req"></pre>
+        </div>
+        <div class="col-sm-6">
+          <h3>Response</h3>
+          <pre id="workflow-res"></pre>
+        </div>
       </div>
       <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <a class="navbar-brand text-center" href="javascript:view('workflows');">
+          <span class="glyphicon glyphicon-list"></span> Workflows
+        </a>
         <a class="navbar-brand" href="javascript:void(0);">
           <span class="glyphicon glyphicon-trash"></span> Remove
         </a>
-        <a class="navbar-brand pull-right" href="javascript:void(0);">
+        <a id="workflow-run" class="navbar-brand pull-right" href="javascript:runWorkflows();">
           <span class="glyphicon glyphicon-play"></span> Run
         </a>
       </nav>
