--- a/pub/htm/home.htm
+++ b/pub/htm/home.htm
@@ -1,5 +1,76 @@
 <script id="tpl-home" type="text/html">
-<div class="home jumbotron">
+<div class="home jumbotron"></div>
+<div class="container">
+  <a href="#video" class="btn btn-default">VIDEO</a>
+  <a href="#edit" class="btn btn-default">EDIT</a>
+  <a href="#post" class="btn btn-default">POST</a>
+  <a href="#ssh" class="btn btn-default">SSH</a>
+	<a target="_blank" href="post.php" class="btn btn-default"><span class="glyphicon glyphicon-send"></span> POST</a>
+	<a target="_blank" href="ssh.php" class="btn btn-default"><span class="glyphicon glyphicon-console"></span> SSH</a>
+</div>
+<br />
+<div class="container">
+  <div class="row-fluid">
+    <div class="col-sm-8 col-sm-offset-2">
+      <div class="panel panel-info">
+        <div class="panel-heading"><span class="glyphicon glyphicon-user"></span> User Profile</div>
+        <div class="panel-body">
+          <div id="login" class="hidden">
+            <form id="userpass">
+            <p class="container">
+            <div class="row-fluid">
+            <input type="text" id="u" class="form-control" placeholder="Username" />
+            </div>
+            </p>
+            <p class="container">
+            <div class="row-fluid">
+            <input type="password" id="p" class="form-control" placeholder="Password" />
+            </div>
+            </p>
+            <p class="container">
+            <div class="row-fluid">
+            <input type="submit" class="btn btn-primary col-xs-12" id="l" value="Login" />
+            </div>
+            </p>
+            </form>
+          </div>
+          <div id="profile" class="hidden">
+            <div class="container-fluid">
+              <div class="row-fluid">
+                <div class="col-sm-3 col-xs-12"><strong>User <span class="glyphicon glyphicon-user"></span></strong></div>
+                <div class="col-sm-9 col-xs-12 user"></div>
+              </div>
+            </div>
+            <div class="container-fluid">
+              <div class="row-fluid">
+                <div class="col-sm-3 col-xs-12"><strong>SSH <span class="glyphicon glyphicon-certificate"></span></strong></div>
+                <div class="col-sm-9 col-xs-12 pub"></div>
+              </div>
+            </div>
+            <div class="container-fluid">
+              <div class="row-fluid">
+                <div class="col-sm-3 col-xs-12"><strong>Logs <span class="glyphicon glyphicon-list-alt"></span></strong></div>
+                <div class="col-sm-9 col-xs-12 logs"></div>
+              </div>
+            </div>
+            <div class="container-fluid">
+              <div class="row-fluid">
+                <div class="col-sm-6 col-xs-12">
+                  <a href="javascript:update();" class="btn btn-default col-xs-12"> Update <span class="glyphicon glyphicon-download"></span> </a>
+                </div>
+                <div class="col-sm-6 col-xs-12">
+                  <a href="javascript:logout();" class="btn btn-primary col-xs-12"> Logout <span class="glyphicon glyphicon-log-out"></span> </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</script>
+<script id="tpl-calendar" type="text/html">
   <div class="container">
     <div class="row">
       <div class="col-sm-6">
@@ -35,14 +106,6 @@
       </div>
     </div>
   </div>
-</div>
-<div class="container">
-  <a href="#video" class="btn btn-default">VIDEO</a>
-  <a href="#edit" class="btn btn-default">EDIT</a>
-  <a href="#post" class="btn btn-default">POST</a>
-  <a href="#ssh" class="btn btn-default">SSH</a>
-  <a href="#automagic" class="btn btn-default">AUTOMAGIC</a>
-</div>
 </script>
 <script id="tpl-automagic" type="text/html">
   <div class="automagic container">
