--- a/pub/htm/home.htm
+++ b/pub/htm/home.htm
@@ -20,7 +20,7 @@
 </div>
 <div id="profile" class="profile page hidden container">
   <div class="row-fluid">
-    <div class="col-sm-8 col-sm-offset-2">
+    <div class="col-sm-12">
       <div class="panel panel-info">
         <div class="panel-heading"><span class="glyphicon glyphicon-user"></span> User Profile</div>
         <div class="panel-body">
@@ -51,7 +51,7 @@
     <span class="glyphicon glyphicon-download"></span> Update
   </a>
   <a class="profile page hidden navbar-brand pull-right" href="javascript:logout();">
-    <span class="glyphicon glyphicon-log-out"></span> Logout
+    <span class="glyphicon glyphicon-log-out"></span> <span class="hidden-xs">Logout</span>
   </a>
 </nav>
 </script>
