--- a/pub/htm/home.htm
+++ b/pub/htm/home.htm
@@ -159,10 +159,10 @@
           <span class="glyphicon glyphicon-list"></span> Workflows
         </a>
         <a class="navbar-brand" href="javascript:createActions();">
-          <span class="glyphicon glyphicon-plus-sign"></span> New Action
+          <span class="glyphicon glyphicon-plus-sign"></span> <span class="hidden-xs">New Action</span>
         </a>
         <a class="navbar-brand pull-right" href="javascript:createWorkflow();">
-          <span class="glyphicon glyphicon-floppy-disk"></span> Save
+          <span class="glyphicon glyphicon-floppy-disk"></span> <span class="hidden-xs">Save</span>
         </a>
       </nav>
     </div>
@@ -206,10 +206,10 @@
           <a class="btn btn-primary btn-block">{{.}}</a>
         </td>
         <td data-action="remove">
-          <a class="btn btn-danger btn-block"><span class="glyphicon glyphicon-trash"></span> Remove</a>
+          <a class="btn btn-danger btn-block"><span class="glyphicon glyphicon-trash"></span> <span class="hidden-xs">Remove</span></a>
         </td>
         <td data-action="read">
-          <a class="btn btn-default btn-block"><span class="glyphicon glyphicon-eye-open"></span> View</button></a>
+          <a class="btn btn-default btn-block"><span class="glyphicon glyphicon-eye-open"></span> <span class="hidden-xs">View</span></button></a>
         </td>
       </tr>
     {{/actions}}
