--- a/pub/index.html
+++ b/pub/index.html
@@ -47,6 +47,459 @@
     <script src="js/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/mustache.min.js"></script>
+<script id="tpl-audio" type="text/html">
+<div class="container-fluid audio">
+  <div id="body"></div>
+  <div class="row">
+    <div id="controls" class="col-sm-12">
+			<div class="btn-group btn-group-justified" role="group" aria-label="...">
+				<div class="btn-group">
+					<button type="button" class="btn btn-default" onclick="javascript:st();"><span class="glyphicon glyphicon-step-backward"></span></button>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default" onclick="javascript:pp();"><span class="glyphicon glyphicon-play"></span></button>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default" onclick="javascript:pp();"><span class="glyphicon glyphicon-pause"></span></button>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default" onclick="javascript:fo();"><span class="glyphicon glyphicon-forward"></span></button>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default" onclick="javascript:ra();"><span class="glyphicon glyphicon-random"></span></button>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default" onclick="javascript:dn();"><span class="glyphicon glyphicon-volume-down"></span></button>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default" onclick="javascript:up();"><span class="glyphicon glyphicon-volume-up"></span></button>
+				</div>
+				<div class="btn-group">
+					<button type="button" class="btn btn-default" onclick="javascript:list();"><span class="glyphicon glyphicon-list"></span></button>
+				</div>
+			</div>
+    </div>
+  </div>
+  <div id="lists" class="row-fluid">
+    <div class="col-sm-8">
+      <h5></h5>
+      <div id="r" class="list-group"></div>
+    </div>
+    <div class="col-sm-4">
+      <h5><span class="glyphicon glyphicon-list"></span> <span id="playlist"></span></h5>
+      <div id="p" class="list-group"></div>
+    </div>
+  </div>
+</div>
+<nav class="navbar navbar-default navbar-fixed-bottom audio">
+  <div id="tl"><div id="t" class="navbar-inverse"></div><span id="l"></span></div>
+</nav>
+</script>
+<script id="tpl-audio-results" type="text/html">
+  <a class="g list-group-item" data-f="{{f}}" data-n="{{n}}" data-t="0">{{n}}
+  <button class="update btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-plus-sign"></span> Playlist</button>
+  <button class="btn btn-default btn-xs pull-right"><span class="glyphicon glyphicon-pencil"></span> Edit</button>
+  </a>
+</script>
+<script id="tpl-home" type="text/html">
+<div class="home jumbotron"></div>
+<div class="container">
+  <a href="#video" class="btn btn-default">VIDEO</a>
+  <a href="#edit" class="btn btn-default">EDIT</a>
+  <a href="#ssh" class="btn btn-default">SSH</a>
+	<a target="_blank" href="ssh.php" class="btn btn-default"><span class="glyphicon glyphicon-console"></span> SSH</a>
+</div>
+<br />
+<div class="login page hidden container">
+	<form id="userpass">
+    <label for="u" class="sr-only">Email address</label>
+    <input type="text" id="u" class="form-control" placeholder="Username" required="" />
+    <label for="p" class="sr-only">Password</label>
+    <input type="password" id="p" class="form-control" placeholder="Password" required="" />
+    <input type="submit" class="btn btn-lg btn-primary btn-block" id="l" value="Login" />
+  </form>
+</div>
+<div id="profile" class="profile page hidden container">
+  <div class="row-fluid">
+    <div class="col-sm-12">
+      <div class="panel panel-info">
+        <div class="panel-heading"><span class="glyphicon glyphicon-user"></span> User Profile</div>
+        <div class="panel-body">
+          <div class="">
+            <div class="container-fluid">
+              <div class="row-fluid">
+                <div class="col-sm-3 col-xs-12"><strong>Quotas <span class="glyphicon glyphicon-hdd"></span></strong></div>
+                <div class="col-sm-9 col-xs-12 quota"><a class="btn btn-primary" href="javascript:quotas();">Retreive Quota</a></div>
+              </div>
+            </div>
+            <div class="container-fluid">
+              <div class="row-fluid">
+                <div class="col-sm-3 col-xs-12"><strong>SSH <span class="glyphicon glyphicon-certificate"></span></strong></div>
+                <div class="col-sm-9 col-xs-12 pub"></div>
+              </div>
+            </div>
+            <div class="container-fluid">
+              <div class="row-fluid">
+                <div class="col-sm-3 col-xs-12"><strong>Logs <span class="glyphicon glyphicon-list-alt"></span></strong></div>
+                <div class="col-sm-9 col-xs-12 logs"></div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+<nav class="navbar navbar-inverse navbar-fixed-bottom">
+  <a id="user" class="profile page hidden navbar-brand" href="javascript:void(0);">
+    <span class="glyphicon glyphicon-user"></span> <span class="user">User</span>
+  </a>
+  <a class="profile page hidden navbar-brand" href="javascript:update();">
+    <span class="glyphicon glyphicon-download"></span> Update
+  </a>
+  <a class="profile page hidden navbar-brand pull-right" href="javascript:logout();">
+    <span class="glyphicon glyphicon-log-out"></span> <span class="hidden-xs">Logout</span>
+  </a>
+</nav>
+</script>
+<script id="tpl-calendar" type="text/html">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-6">
+        <h2 id="date" class="text-center"></h2>
+        <h1 id="clock" class="text-center"></h1>
+      </div>
+      <div class="col-sm-6">
+        <table id="calendar" class="table table-bordered">
+          <thead>
+            <tr>
+              <th colspan="2"><a href="javascript:prev();"><span class="glyphicon glyphicon-menu-left"></span></a></th>
+              <th colspan="3"><a href="javascript:curr();"><span class="glyphicon glyphicon-calendar"></span> <span id="title">{{title}}</span></a></th>
+              <th colspan="2"><a href="javascript:next();"><span class="glyphicon glyphicon-menu-right"></span></a></th>
+            </tr>
+            <tr>
+              <th>S<span class="hidden-xs hidden-sm">un</span></th>
+              <th>M<span class="hidden-xs hidden-sm">on</span></th>
+              <th>T<span class="hidden-xs hidden-sm">ue</span></th>
+              <th>W<span class="hidden-xs hidden-sm">ed</span></th>
+              <th>T<span class="hidden-xs hidden-sm">hu</span></th>
+              <th>F<span class="hidden-xs hidden-sm">ri</span></th>
+              <th>S<span class="hidden-xs hidden-sm">at</span></th>
+            </tr>
+          </thead>
+          <tbody>
+            {{#calendar}}
+              <tr>
+                {{#.}}<td id="day-{{year}}-{{month}}-{{.}}">{{.}}</td>{{/.}}
+              </tr>
+            {{/calendar}}
+          </tbody>
+        </table>
+      </div>
+    </div>
+  </div>
+</script>
+<script id="tpl-quotas" type="text/html">
+  <table class="table table-bordered"><tr>
+  {{#quotas}}
+    <td title="{{n}}">
+    <span class="glyphicon glyphicon-{{i}}"></span>
+    {{#p}} 
+      {{p}}% 
+    {{/p}}
+    {{^p}}
+      <span class="text-success glyphicon glyphicon-check"></span>
+    {{/p}}
+    </td>
+  {{/quotas}}
+  </tr></table>
+</script>
+<script id="tpl-automagic" type="text/html">
+  <div class="automagic container">
+    <div class="workflows">
+      <table class="table">
+        <thead>
+          <tr><th colspan="4">Workflows</th></tr>
+        </thead>
+        <tbody>
+        {{#workflows}}
+          <tr data-workflow="{{.}}">
+            <td data-action="remove">
+              <a class="btn btn-danger "><span class="glyphicon glyphicon-trash"></span> Remove</a>
+            </td>
+            <td data-action="read">
+              <a class="btn btn-primary btn-block">{{.}}</a>
+            </td>
+            <td data-action="schedule">
+              <a class="btn btn-default btn-block hidden"><span class="glyphicon glyphicon-calendar"></span> Schedule</a>
+            </td>
+            <td data-action="run">
+              <a class="btn btn-default btn-block"><span class="glyphicon glyphicon-play"></span> Run</button></a>
+            </td>
+          </tr>
+        {{/workflows}}
+        </tbody>
+      </table>
+      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <a class="navbar-brand pull-right" href="javascript:createWorkflows();">
+          <span class="glyphicon glyphicon-plus-sign"></span> New Workflow
+        </a>
+      </nav>
+    </div>
+    <div class="workflow hidden">
+      <div class="row">
+        <div class="col-xs-12">
+          <h2 id="workflow-n" class="text-center"></h2>
+        </div>
+        <div class="col-sm-6">
+          <h3>Request</h3>
+          <pre id="workflow-req"></pre>
+        </div>
+        <div class="col-sm-6">
+          <h3>Response</h3>
+          <pre id="workflow-res"></pre>
+        </div>
+      </div>
+      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <a class="navbar-brand text-center" href="javascript:view('workflows');">
+          <span class="glyphicon glyphicon-list"></span> Workflows
+        </a>
+        <a class="navbar-brand" href="javascript:deleteWorkflows();">
+          <span class="glyphicon glyphicon-trash"></span> Remove
+        </a>
+        <a id="workflow-run" class="navbar-brand pull-right" href="javascript:runWorkflows();">
+          <span class="glyphicon glyphicon-play"></span> Run
+        </a>
+      </nav>
+    </div>
+    <div class="actions hidden">
+      <div class="list"></div>
+      <hr />
+      <input id="workflowName" class="form-control" type="text" placeholder="Name" />
+      <hr />
+      <div class="action"><table class="table"><tbody></tbody></table></div>
+      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <a class="navbar-brand text-center" href="javascript:view('workflows');">
+          <span class="glyphicon glyphicon-list"></span> Workflows
+        </a>
+        <a class="navbar-brand" href="javascript:createActions();">
+          <span class="glyphicon glyphicon-plus-sign"></span> <span class="hidden-xs">New Action</span>
+        </a>
+        <a class="navbar-brand pull-right" href="javascript:createWorkflow();">
+          <span class="glyphicon glyphicon-floppy-disk"></span> <span class="hidden-xs">Save</span>
+        </a>
+      </nav>
+    </div>
+    <div class="action hidden">
+      <div class="row">
+        <pre class="content col-xs-12"></pre>
+      </div>
+      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <a class="navbar-brand" href="javascript:view('actions');">
+          <span class="glyphicon glyphicon-plus-sign"></span> New Workflow
+        </a>
+        <a class="navbar-brand pull-right" href="javascript:void(0);">
+          <span class="glyphicon glyphicon-trash"></span> Remove
+        </a>
+      </nav>
+    </div>
+    <div class="methods hidden">
+      <input id="actionName" class="form-control" type="text" placeholder="Name" />
+      <hr />
+      <div class="list"></div>
+      <nav class="navbar navbar-inverse navbar-fixed-bottom">
+        <a class="navbar-brand" href="javascript:view('actions');">
+          <span class="glyphicon glyphicon-plus-sign"></span> New Workflow
+        </a>
+        <a class="navbar-brand pull-right" href="javascript:createAction();">
+          <span class="glyphicon glyphicon-floppy-disk"></span> Save
+        </a>
+      </nav>
+    </div>
+  </div>
+</script>
+<script id="tpl-automagic-actions" type="text/html">
+  <table class="table">
+    <thead>
+      <tr><th colspan="3">Actions</th></tr>
+    </thead>
+    <tbody>
+    {{#actions}}
+      <tr data-action="{{.}}">
+        <td data-action="add">
+          <a class="btn btn-primary btn-block">{{.}}</a>
+        </td>
+        <td data-action="remove">
+          <a class="btn btn-danger btn-block"><span class="glyphicon glyphicon-trash"></span> <span class="hidden-xs">Remove</span></a>
+        </td>
+        <td data-action="read">
+          <a class="btn btn-default btn-block"><span class="glyphicon glyphicon-eye-open"></span> <span class="hidden-xs">View</span></button></a>
+        </td>
+      </tr>
+    {{/actions}}
+    </tbody>
+  </table>
+</script>
+<script id="tpl-automagic-methods" type="text/html">
+  <div id="method" class="container-fluid">
+  {{#methods}}
+    <a data-method="{{i}}" class="btn btn-default">
+      {{n}}
+    </a>
+  {{/methods}}
+  </div>
+  <hr />
+  <div id="attributes" class="container-fluid">
+  {{#methods}}
+    <div id="method-{{i}}" class="hidden">
+    {{#a}}
+      {{#textarea}}
+        <textarea class="form-control" placeholder="{{.}}"></textarea>
+      {{/textarea}}
+    {{/a}}
+    </div>
+  {{/methods}}
+  </div>
+</script>
+<script id="tpl-git" type="text/html">
+	<div class="git">
+		<div id="projects" class="col-xs-12 col-sm-4">
+			<ul class="list-group">
+			{{#projects}}
+				<li data-repo="{{r}}" class="list-group-item repo">
+					<strong>{{r}}</strong>&nbsp;<br />
+					<a href="javascript:void(0);" class="text-muted">{{b}}</a>
+          <div class="pull-right">
+					<span class="label label-success">{{s.length}}</span>
+					<span class="label label-warning">{{n.length}}</span>
+					<span class="label label-danger">{{u.length}}</span>
+          </div>
+					<hr />
+					<div class="status">
+						<a data-action="push" href="javascript:void(0);" class="action push-{{s.length}} btn btn-primary">
+							<span class="glyphicon glyphicon-upload"></span>
+							<span class="hidden-xs hidden-sm">PUSH</span>
+						</a>
+						<a data-action="pull" href="javascript:void(0);" class="action btn btn-info">
+							<span class="glyphicon glyphicon-download"></span>
+							<span class="hidden-xs hidden-sm">PULL</span>
+						</a>
+						<a data-action="diff" href="javascript:void(0);" class="action diff-{{n.length}}{{u.length}} btn btn-default">
+							<span class="glyphicon glyphicon-duplicate"></span>
+							<span class="hidden-xs hidden-sm">DIFF</span>
+						</a>
+						<a data-action="all" href="javascript:void(0);" class="action all-{{s.length}}{{n.length}}{{u.length}} btn btn-success ">
+							<span class="glyphicon glyphicon-plus"></span>
+							<span class="hidden-xs hidden-sm">PUSH</span>
+						</a>
+					</div>
+				</li>
+			{{/projects}}
+			</ul>
+		</div>
+		<div id="project" class="col-xs-12 col-sm-8">
+		{{#projects}}
+			<div data-repo="{{r}}" class="hidden repo">
+				<div class="panel panel-default">
+					<div class="panel-heading">
+						<strong>{{r}}</strong>
+						<a data-action="log" href="javascript:void(0);" class="action btn btn-default btn-xs"><span class="glyphicon glyphicon-list"></span></a>
+						<span class="pull-right">{{b}}</span>
+					</div>
+					<div class="panel-body">
+						<div class="row">
+							<div class="col-xs-12">
+								<div class="status col-sm-4">
+									{{#s}}
+										<a data-action="rem" href="javascript:void(0);" class="action col-xs-12 btn btn-success btn-xs" data-file="{{.}}" title="{{.}}">
+											<span class="pull-left glyphicon glyphicon-minus"></span>
+											<span class="">{{.}}</span>
+										</a><br />
+									{{/s}}
+								</div>
+								<div class="status col-sm-4">
+									{{#n}}
+										<a data-action="add" href="javascript:void(0);" class="action col-xs-12 btn btn-warning btn-xs" data-file="{{.}}" title="{{.}}">
+											<span class="pull-left glyphicon glyphicon-plus"></span>
+											<span class="">{{.}}</span>
+										</a><br />
+									{{/n}}
+								</div>
+								<div class="status col-sm-4">
+									{{#u}}
+										<a data-action="add" href="javascript:void(0);" class="action col-xs-12 btn btn-danger btn-xs" data-file="{{.}}" title="{{.}}">
+											<span class="pull-left glyphicon glyphicon-plus"></span>
+											<span class="">{{.}}</span>
+										</a>
+									{{/u}}
+								</div>
+							</div>
+						</div>
+						<div class="col-sm-4">
+							<a data-action="push" href="javascript:void(0);" class="action push-{{s.length}} btn btn-primary col-xs-12">
+								<span class="glyphicon glyphicon-upload"></span>
+								<span class="hidden-xs">Push</span>
+							</a>
+						</div>
+						<div class="col-sm-4">
+							<a data-action="pull" href="javascript:void(0);" class="action btn btn-info col-xs-12">
+								<span class="glyphicon glyphicon-download"></span>
+								<span class="hidden-xs">Pull</span>
+							</a>
+						</div>
+						<div class="col-sm-4">
+							<a data-action="diff" href="javascript:void(0);" class="action diff-{{n.length}}{{u.length}} btn btn-default col-xs-12">
+								<span class="glyphicon glyphicon-duplicate"></span>
+								<span class="hidden-xs">Diff</span>
+							</a>
+						</div>
+					</div>
+          <div class="panel-footer">
+            <form class="config">
+              <input type="hidden" name="req" value="config" />
+              <input type="hidden" name="project" value="{{r}}" />
+              <div class="row">
+                <div class="col-sm-4">
+                  <input class="form-control" name="name" type="text" placeholder="Name" value="{{c.name}}" />
+                </div>
+                <div class="col-sm-4">
+                  <input class="form-control" name="email" type="email" placeholder="Email" value="{{c.email}}" />
+                </div>
+                <div class="col-sm-4">
+                  <input class="btn btn-default btn-block" type="submit" value="Save" />
+                </div>
+              </div>
+            </form>
+          </div>
+				</div>
+			</div>
+		{{/projects}}
+		</div>
+	</div>
+	<nav class="navbar navbar-inverse navbar-fixed-bottom">
+    <div class="container-fluid">
+      <form id="clone">
+        <div class="form-group ">
+          <div class="col-xs-3">
+            <a id="cache" href="javascript:void(0);" class="btn btn-primary col-xs-12"><span class="glyphicon glyphicon-trash"></span> Cache</a>
+          </div>
+          <div class="col-xs-9">
+            <div class="row">
+              <div class="col-lg-12">
+                <div class="input-group">
+                  <input id="url" type="text" class="form-control" placeholder="URL">
+                  <span class="input-group-btn">
+                    <input class="btn btn-default" type="submit" value="Clone" />
+                  </span>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </form>
+    </div>
+  </nav>
+</script>
     <script src="js/script.js"></script>
   </body>
 </html>
