--- a/pub/index.html
+++ b/pub/index.html
@@ -106,8 +106,6 @@
 <div class="container">
   <a href="#video" class="btn btn-default">VIDEO</a>
   <a href="#edit" class="btn btn-default">EDIT</a>
-  <a href="#ssh" class="btn btn-default">SSH</a>
-	<a target="_blank" href="ssh.php" class="btn btn-default"><span class="glyphicon glyphicon-console"></span> SSH</a>
 </div>
 <br />
 <div class="login page hidden container">
@@ -128,20 +126,20 @@
           <div class="">
             <div class="container-fluid">
               <div class="row-fluid">
-                <div class="col-sm-3 col-xs-12"><strong>Quotas <span class="glyphicon glyphicon-hdd"></span></strong></div>
-                <div class="col-sm-9 col-xs-12 quota"><a class="btn btn-primary" href="javascript:quotas();">Retreive Quota</a></div>
+                <div class="col-sm-3 col-xs-12"><a class="btn btn-default" href="javascript:quotas();">Quotas <span class="glyphicon glyphicon-hdd"></span></a></div>
+                <div class="col-sm-9 col-xs-12 quota"></div>
               </div>
             </div>
             <div class="container-fluid">
               <div class="row-fluid">
-                <div class="col-sm-3 col-xs-12"><strong>SSH <span class="glyphicon glyphicon-certificate"></span></strong></div>
-                <div class="col-sm-9 col-xs-12 pub"></div>
+                <div class="col-sm-3 col-xs-12"><a class="btn btn-default" href="javascript:ssh();">SSH <span class="glyphicon glyphicon-certificate"></span></a></div>
+                <div class="col-sm-9 col-xs-12 ssh"></div>
               </div>
             </div>
             <div class="container-fluid">
               <div class="row-fluid">
-                <div class="col-sm-3 col-xs-12"><strong>Logs <span class="glyphicon glyphicon-list-alt"></span></strong></div>
-                <div class="col-sm-9 col-xs-12 logs"></div>
+                <div class="col-sm-3 col-xs-12"><a class="btn btn-default" href="javascript:logs();">Logs <span class="glyphicon glyphicon-list-alt"></span></a></div>
+                <div class="col-sm-9 col-xs-12 log"></div>
               </div>
             </div>
           </div>
