--- a/pub/index.html
+++ b/pub/index.html
@@ -498,6 +498,24 @@
     </div>
   </nav>
 </script>
+<script id="tpl-edit" type="text/html">
+    <div class="edit" class="container-fluid">
+      <div class="row-fluid">
+        <div class="col-xs-12">
+          <div id="m" class="btn-group btn-group-xs hidden">
+            <button type="button" class="l btn btn-default"><span class="glyphicon glyphicon-tasks"></span></button>
+            <button type="button" class="d btn btn-default"><span class="glyphicon glyphicon-file"></span></button>
+          </div>
+          <ol id="b" class="breadcrumb"><li class="active"><span class="glyphicon glyphicon-home"></span></li></ol>
+          <div id="r" class="list-group"></div>
+        </div>
+        <div class="col-xs-12">
+          <textarea id="d" name="d" class="hidden form-control" rows="10" placeholder="Info"></textarea>
+          <div id="l" class="list-group hidden"></div>
+        </div>
+      </div>
+    </div>
+</script>
     <script src="js/script.js"></script>
   </body>
 </html>
